--- a/Views/Diagram/DiagramEvents.cshtml
+++ b/Views/Diagram/DiagramEvents.cshtml
@@ -190,6 +190,7 @@
             symbol.width = 50;
             symbol.height = 50;
             symbol.constraints = ej.diagrams.NodeConstraints.Default | ej.diagrams.NodeConstraints.AllowDrop;
+            symbol.style.strokeColor = "#757575";
         }
 
         function getSymbolInfo(symbol) {
