--- a/Views/Diagram/LogicCircuit.cshtml
+++ b/Views/Diagram/LogicCircuit.cshtml
@@ -188,12 +188,12 @@
         function getSymbolInfo(symbol) {
             return { fit: true };
         }
-        function getSymbolDefaults(symbol) {
+        function getSymbolNodes(symbol) {
             symbol.width = 55;
             symbol.height = 40;
             symbol.offsetX = 20;
             symbol.offsetY = 20;
-            symbol.style = { fill: 'white', strokeWidth: 1, strokeColor: '#444' };
+            symbol.style = { fill: 'white', strokeWidth: 1, strokeColor: '#757575' };
         }
 
         function addEvents() {
