--- a/Views/Diagram/Serialization.cshtml
+++ b/Views/Diagram/Serialization.cshtml
@@ -222,6 +222,7 @@
                 symbol.height = 40;
             }
             symbol.style.strokeWidth = 2;
+            symbol.style.strokeColor = '#757575';
         }
         function getSymbolInfo(symbol) {
             return { fit: true };
