--- a/Views/Diagram/SymbolPalette.cshtml
+++ b/Views/Diagram/SymbolPalette.cshtml
@@ -66,7 +66,7 @@
                 symbol.width = 50;
                 symbol.height = 40;
             }
-            symbol.style = { strokeWidth: 2 };
+            symbol.style = { strokeWidth: 2, strokeColor: '#757575' };
         }
 
 
