--- a/Views/Dialog/Positioning.cshtml
+++ b/Views/Dialog/Positioning.cshtml
@@ -26,9 +26,9 @@
         width: 100%;
     }
 
-    #defaultDialog table,
-    #defaultDialog th,
-    #defaultDialog td {
+    #positionDialog table,
+    #positionDialog th,
+    #positionDialog td {
         border: 1px solid #D8D8D8;
         border-collapse: collapse;
     }
@@ -37,7 +37,7 @@
         height: 365px;
     }
 
-    #defaultDialog .e-dialog .e-footer-content {
+    #positionDialog .e-dialog .e-footer-content {
         padding:  0px 10px 10px;
     }
 
