--- a/Views/Grid/DialogTemplateEdit.cshtml
+++ b/Views/Grid/DialogTemplateEdit.cshtml
@@ -29,7 +29,7 @@
                         data: JSON.stringify({ value: args.rowData })
                     });
                     ajax.send().then(function (data) {
-                        $("#dialogTemp").html(data); //Render the edit form with selected record
+                        appendElement(data, args.form); //render the edit form with selected record
                         args.form.elements.namedItem('CustomerID').focus();
                         ej.popups.hideSpinner(args.dialog.element);
                     }).catch(function (xhr) {
@@ -44,7 +44,7 @@
                         contentType: "application/json",
                     });
                     ajax.send().then(function (data) {
-                        $("#dialogTemp").html(data); //Render the edit form with selected record
+                        appendElement(data, args.form); //Render the edit form with selected record
                         args.form.elements.namedItem('OrderID').focus();
                         ej.popups.hideSpinner(args.dialog.element);
                     }).catch(function (xhr) {
@@ -54,6 +54,19 @@
                 }
             }
         }
+        function appendElement(elementString, form) {
+            form.querySelector("#dialogTemp").innerHTML = elementString;
+            form.ej2_instances[0].addRules('OrderID', { required: true, number: true });
+            form.ej2_instances[0].addRules('CustomerID', { required: true, minLength: 3 }); //adding the form validation rules 
+            form.ej2_instances[0].refresh();  // refresh method of the formObj
+            var script = document.createElement('script');
+            script.type = "text/javascript";
+            var serverScript = form.querySelector("#dialogTemp").querySelector('script');
+            script.textContent = serverScript.innerHTML;
+            document.head.appendChild(script);
+            serverScript.remove();
+        }
+
     </script>
 
     <style>
