--- a/Views/MaskedTextBox/CustomMask.cshtml
+++ b/Views/MaskedTextBox/CustomMask.cshtml
@@ -75,7 +75,7 @@
     <p>The custom mask is achieved by the following ways:</p>
     <p style="font-weight: 500">Custom characters:</p>
     <p>
-        You can form the <b><a href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2~Syncfusion.EJ2.Inputs.MaskedTextBox~Mask.html" target="_blank">mask</a></b> with any non-mask elements (literals), and you can configure the behavior of that non-mask element as mask element
+        You can form the <b><a href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.Inputs.MaskedTextBox.html#Syncfusion_EJ2_Inputs_MaskedTextBox_Mask" target="_blank">mask</a></b> with any non-mask elements (literals), and you can configure the behavior of that non-mask element as mask element
         through the
         <b><a href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2~Syncfusion.EJ2.Inputs.MaskedTextBox~CustomCharacters.html" target="_blank">customCharacters</a></b> property.
     </p>
