--- a/Views/MaskedTextBox/Formats.cshtml
+++ b/Views/MaskedTextBox/Formats.cshtml
@@ -135,7 +135,7 @@
     <p>
         Here, the "Value" and "Masked Value" labels from the properties panel returns the raw value (unmasked value) and masked value of the MaskedTextBox component.
         You can also get these raw value and masked value anytime through the
-        <b><a href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2~Syncfusion.EJ2.Inputs.MaskedTextBox~Value.html" target="_blank">value</a></b> property
+        <b><a href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.Inputs.MaskedTextBox.html#Syncfusion_EJ2_Inputs_MaskedTextBox_Value" target="_blank">value</a></b> property
         and <b><a href="http://ej2.syncfusion.com/documentation/maskedtextbox/api-maskedTextBox.html#getmaskedvalue" target="_blank">getMaskedValue</a></b> method.
     </p>
 </div>
