--- a/Views/NumericTextBox/CustomFormat.cshtml
+++ b/Views/NumericTextBox/CustomFormat.cshtml
@@ -73,7 +73,7 @@
   <div id="description">
     <p>
         The NumericTextBox provides an option to customize the display format of the numeric value using the
-        <a href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2~Syncfusion.EJ2.Inputs.NumericTextBox~Format.html" target="_blank">format</a> property.
+        <a href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.Inputs.NumericTextBox.html#Syncfusion_EJ2_Inputs_NumericTextBox_Format" target="_blank">format</a> property.
         It accepts the <a href="https://msdn.microsoft.com/en-us/library/dwhawy9k.aspx" target="_blank"> standard numeric format string</a> and
         <a href="https://msdn.microsoft.com/en-us/library/0c899ak8.aspx" target="_blank"> custom numeric format string</a> as specified in MSDN. The formatted value displays when the component is not focused.
     </p>
