--- a/Views/NumericTextBox/RangeValidation.cshtml
+++ b/Views/NumericTextBox/RangeValidation.cshtml
@@ -108,10 +108,10 @@
    <div id="description">
     <p>
         The NumericTextBox has the options to restrict the input value between a specific range using the
-        <a href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2~Syncfusion.EJ2.Inputs.NumericTextBox~Min.html" target="_blank">min</a>,
-        <a href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2~Syncfusion.EJ2.Inputs.NumericTextBox~Max.html" target="_blank">max</a>, and
-        <a href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2~Syncfusion.EJ2.Inputs.NumericTextBox~StrictMode.html" target="_blank">strictMode</a> properties.
-    </p>
+        <a href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.Inputs.NumericTextBox.html#Syncfusion_EJ2_Inputs_NumericTextBox_Min" target="_blank">min</a>,
+        <a href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.Inputs.NumericTextBox.html#Syncfusion_EJ2_Inputs_NumericTextBox_Max" target="_blank">max</a>, and
+        <a href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.Inputs.NumericTextBox.html#Syncfusion_EJ2_Inputs_NumericTextBox_StrictMode" target="_blank">strictMode</a> properties.
+ </p>
     <ul>
         <li>
             When you enable the <b>strictMode</b> property, the value will automatically change within a range on passing
