--- a/Views/Toast/Position.cshtml
+++ b/Views/Toast/Position.cshtml
@@ -203,7 +203,7 @@
 
         .e-toast-icon.e-laura.e-icons {
             border-radius: 50%;
-            background-image: url('../../Content/Toast/resource/laura.png');
+            background-image: url('./../Content/Toast/resource/laura.png');
             background-repeat: no-repeat;
             background-size: cover;
             height: 50px !important;
