--- a/Views/TreeView/Template.cshtml
+++ b/Views/TreeView/Template.cshtml
@@ -44,6 +44,10 @@
         float: left;
         margin-left: 5px
     }
+
+    .e-treeview.e-interaction.e-fullrow-wrap .e-text-content { 
+        pointer-events: none;
+    }
 </style>
 @*custom code end*@    
 }
