--- a/Views/Diagram/DefaultFunctionalities.cshtml
+++ b/Views/Diagram/DefaultFunctionalities.cshtml
@@ -199,6 +199,7 @@
                 symbol.height = 50;
             }
             symbol.style.strokeWidth = 2;
+            symbol.style.strokeColor = "#757575"
         }
 
         function getSymbolInfo(symbol) {
