--- a/Views/Dialog/Resizable.cshtml
+++ b/Views/Dialog/Resizable.cshtml
@@ -3,7 +3,7 @@
 @section ControlsSection{
     <div id="target" class="col-lg-12 control-section">
         @Html.EJS().Button("dialogBtn").CssClass("dlgbtn").Content("Open Dialog").Render()
-        @Html.EJS().Dialog("resizeDialog").Visible(true).AnimationSettings(new DialogAnimationSettings() { Effect = DialogEffect.None }).EnableResize(true).Header("Resize Me").Created("created").Close("dialogClose").Open("dialogOpen").ContentTemplate(@<div><span>This is a dialog with resizable support.</span></div>).ShowCloseIcon(true).CloseOnEscape(true).Width("300px").Target("#target").AllowDragging(true).Render()
+        @Html.EJS().Dialog("resizeDialog").ResizeHandles(new List <string> () { "All" } ).Visible(true).AnimationSettings(new DialogAnimationSettings() { Effect = DialogEffect.None }).EnableResize(true).Header("Resize Me").Created("created").Close("dialogClose").Open("dialogOpen").ContentTemplate(@<div><span>This is a dialog with resizable support.</span></div>).ShowCloseIcon(true).CloseOnEscape(true).Width("300px").Target("#target").AllowDragging(true).Render()
     </div>
 }
 <style>
@@ -66,7 +66,7 @@
 @section ActionDescription{
     <div id="action-description">
         <p>
-            This example demonstrates the resize operation of the dialog control. To resize the modal dialog, select and resize a dialog using its handle (grip) within the sample container.
+            This sample demonstrates the resize operation of the dialog control in all directions. To resize the modal dialog, select and resize a dialog using its handle (grip) or hover on any of the edges or border of the dialog within the sample container.
             The "open dialog" button is used to reopen the dialog if it is closed.
         </p>
     </div>
@@ -75,6 +75,7 @@
     <div id="description">
         <p>
             Users can create resizable modal dialog by setting the enableResize property to true, which is used to change the size of a dialog dynamically and view its content with expanded mode.
+            The resizeHandles property can also be configured for which directions the dialog should resize.
             When you configure the target property along with enableResize property, the dialog can be resized within its specified target container.
         </p>
     </div>
