--- a/Views/Grid/FilterMenu.cshtml
+++ b/Views/Grid/FilterMenu.cshtml
@@ -5,7 +5,7 @@
         <div class="control-wrapper">
             <div class="control-section">
 
-                @Html.EJS().Grid("FilterMenu").DataSource((IEnumerable<object>)ViewBag.dataSource).AllowFiltering().Columns(col =>
+                @Html.EJS().Grid("FilterMenu").DataSource((IEnumerable<object>)ViewBag.dataSource).AllowFiltering().AllowSorting().Columns(col =>
            {
 
                col.Field("OrderID").HeaderText("Order ID").Width("150").TextAlign(Syncfusion.EJ2.Grids.TextAlign.Right).Add();
@@ -50,8 +50,8 @@
     <div id="action-description">
         <p>
             This sample demonstrates the way of filtering Grid columns using menu, checkbox and excel filter UI. In this sample, click the filtering
-            icon from column header to show filter UI for a particular column. You can change the filter type from the properties
-            panel.
+            icon from column header to show filter UI for a particular column. You can change the filter type from the properties panel and while Excel filter type is selected,
+            you can sort the column using the sorting option available in the excel filter dialog.
         </p>
     </div>
 }
