--- a/Views/NumericTextBox/RestrictDecimals.cshtml
+++ b/Views/NumericTextBox/RestrictDecimals.cshtml
@@ -75,7 +75,7 @@
 <div id="description">
     <p>
         The NumericTextBox provides an option to restrict the number of decimal values, by using the
-        <a href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2~Syncfusion.EJ2.Inputs.NumericTextBox~Decimals.html" target="_blank"> decimals</a> property. To restrict the number of decimal values on typing, use the <a href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2~Syncfusion.EJ2.Inputs.NumericTextBox~Decimals.html" target="_blank"> decimals</a> and <a href="http://ej2.syncfusion.com/documentation/numerictextbox/api-numericTextBox.html#validatedecimalontype-boolean" target="_blank"> validateDecimalOnType</a> properties.
+        <a href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.Inputs.NumericTextBox.html#Syncfusion_EJ2_Inputs_NumericTextBox_Decimals" target="_blank"> decimals</a> property. To restrict the number of decimal values on typing, use the <a href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.Inputs.NumericTextBox.html#Syncfusion_EJ2_Inputs_NumericTextBox_Decimals" target="_blank"> decimals</a> and <a href="http://ej2.syncfusion.com/documentation/numerictextbox/api-numericTextBox.html#validatedecimalontype-boolean" target="_blank"> validateDecimalOnType</a> properties.
     </p>
     <p>
         More information on the restrict decimals configuration can be found in the
