--- a/Views/Schedule/RemoteData.cshtml
+++ b/Views/Schedule/RemoteData.cshtml
@@ -5,10 +5,10 @@
         <div class="content-wrapper">
             @Html.EJS().Schedule("schedule").Width("100%").Height("650px").EventSettings(es => es.DataSource(dataManger =>
        {
-           dataManger.Url("https://js.syncfusion.com/demos/ejservices/api/Schedule/LoadData")
+           dataManger.Url("https://ej2services.syncfusion.com/production/web-services/api/Schedule")
           .CrossDomain(true)
           .Adaptor("WebApiAdaptor");
-       })).Readonly(true).SelectedDate(new DateTime(2017, 6, 5)).Render()
+       })).Readonly(true).SelectedDate(new DateTime(2020, 10, 22)).Render()
         </div>
     </div>
 }
