--- a/Views/Uploader/ChunkUpload.cshtml
+++ b/Views/Uploader/ChunkUpload.cshtml
@@ -94,7 +94,8 @@
 @section ActionDescription{
     <div id="action-description">
         <p>
-            This example demonstrates the chunk upload functionalities of the Uploader component.
+            This <a href="https://www.syncfusion.com/aspnet-mvc-ui-controls/file-upload"
+        target="_blank">ASP.NET MVC File Upload</a> example demonstrates the chunk upload functionalities of the Uploader component.
             Browse or drag-and-drop a large file to upload with pause, resume, and retry options. 
         </p>
         <p>Also, configured property panel to change the chunk size dynamically.</p>
