--- a/Views/Uploader/DefaultFunctionalities.cshtml
+++ b/Views/Uploader/DefaultFunctionalities.cshtml
@@ -56,7 +56,8 @@
 @section ActionDescription{
     <div id="action-description">
         <p>
-            This example demonstrates the default functionalities of the file upload control with auto upload and sequential upload options.
+            This <a href="https://www.syncfusion.com/aspnet-mvc-ui-controls/file-upload"
+        target="_blank">ASP.NET MVC File Upload</a> example demonstrates the default functionalities of the file upload control with auto upload and sequential upload options.
             Browse or drag-and-drop the files which you want to upload to the server and upload it..</p>
 
     </div>
