--- a/Views/Uploader/PreloadFiles.cshtml
+++ b/Views/Uploader/PreloadFiles.cshtml
@@ -45,7 +45,8 @@
 
 @section ActionDescription{
     <div id="action-description">
-        <p>This example demonstrates how to pre-load the files of the Uploader. The already uploaded files are configured in file list to view and remove them.</p>
+        <p>This <a href="https://www.syncfusion.com/aspnet-mvc-ui-controls/file-upload"
+        target="_blank">ASP.NET MVC File Upload</a> example demonstrates how to pre-load the files of the Uploader. The already uploaded files are configured in file list to view and remove them.</p>
     </div>
 }
 @section Description{
