--- a/Views/Uploader/Template.cshtml
+++ b/Views/Uploader/Template.cshtml
@@ -393,7 +393,8 @@
 
     @section ActionDescription{
         <div id="action-description">
-            <p>This example demonstrates how to customize the file list with template. Browse or select the files to view the file list template.</p>
+            <p>This <a href="https://www.syncfusion.com/aspnet-mvc-ui-controls/file-upload"
+        target="_blank">ASP.NET MVC File Upload</a> example demonstrates how to customize the file list with template. Browse or select the files to view the file list template.</p>
 
         </div>
     }
