--- a/Views/ListBox/DualListBox.cshtml
+++ b/Views/ListBox/DualListBox.cshtml
@@ -4,11 +4,13 @@
     <div class="dual-list-wrapper">
         <div class="dual-list-groupa">
             <h4>Group A</h4>
-            @Html.EJS().ListBox("listbox1").Scope("#listbox2").Height("330px").ToolbarSettings(new Syncfusion.EJ2.DropDowns.ListBoxToolbarSettings { Items = new string[] { "moveUp", "moveDown", "moveTo", "moveFrom", "moveAllTo", "moveAllFrom" } }).Fields(new Syncfusion.EJ2.DropDowns.ListBoxFieldSettings { Text = "Name" }).DataSource((IEnumerable<object>)ViewBag.groupA).Render()
+            @Html.EJS().ListBox("listbox1").Scope("#listbox2").Height("330px").ToolbarSettings(new Syncfusion.EJ2.DropDowns.ListBoxToolbarSettings { Items = new string[] { "moveUp", "moveDown", "moveTo", "moveFrom", "moveAllTo", "moveAllFrom" } }).Fields(new Syncfusion.EJ2.DropDowns.ListBoxFieldSettings { Text = "Name" }).DataSource((IEnumerable<object>)ViewBag.groupA).NoRecordsTemplate(
+            "<div class=\"e-list-nrt\"><span>NO DATA AVAILABLE</span></div>").Render()
         </div>
         <div class="dual-list-groupb">
             <h4>Group B</h4>
-            @Html.EJS().ListBox("listbox2").Height("330px").Fields(new Syncfusion.EJ2.DropDowns.ListBoxFieldSettings { Text = "Name" }).DataSource((IEnumerable<object>)ViewBag.groupB).Render()
+            @Html.EJS().ListBox("listbox2").Height("330px").Fields(new Syncfusion.EJ2.DropDowns.ListBoxFieldSettings { Text = "Name" }).DataSource((IEnumerable<object>)ViewBag.groupB).NoRecordsTemplate(
+            "<div class=\"e-list-nrt\"><span>NO DATA AVAILABLE</span></div>").Render()
         </div>
     </div>
 </div>
