--- a/Views/PdfViewer/FormDesigner.cshtml
+++ b/Views/PdfViewer/FormDesigner.cshtml
@@ -5,7 +5,7 @@
 
 @section ControlsSection{
     <div class="control-section">
-        @Html.EJS().PdfViewer("pdfviewer").ServiceUrl(VirtualPathUtility.ToAbsolute("~/api/PdfViewer/")).DocumentPath("FormDesigner.pdf").DocumentLoad("documentLoad").DownloadEnd("documentLoad").Render()
+        @Html.EJS().PdfViewer("pdfviewer").ServiceUrl(VirtualPathUtility.ToAbsolute("~/api/PdfViewer/")).DocumentPath("FormDesigner.pdf").DocumentLoad("documentLoad").DownloadEnd("documentLoad").ValidateFormFields("validateFormFields").EnableFormFieldsValidation(true).ShowNotificationDialog(false).Render()
     </div>
 }
 
@@ -44,8 +44,8 @@
             viewer.formDesignerModule.addFormField("Textbox", { name: "First Name", bounds: { X: 146, Y: 229, Width: 150, Height: 24 } });
             viewer.formDesignerModule.addFormField("Textbox", { name: "Middle Name", bounds: { X: 338, Y: 229, Width: 150, Height: 24 } });
             viewer.formDesignerModule.addFormField("Textbox", { name: "Last Name", bounds: { X: 530, Y: 229, Width: 150, Height: 24 } });
-            viewer.formDesignerModule.addFormField("RadioButton", { bounds: { X: 148, Y: 289, Width: 18, Height: 18 }, name: "Radio", isSelected: false });
-            viewer.formDesignerModule.addFormField("RadioButton", { bounds: { X: 292, Y: 289, Width: 18, Height: 18 }, name: "Radio", isSelected: false });
+            viewer.formDesignerModule.addFormField("RadioButton", { bounds: { X: 148, Y: 289, Width: 18, Height: 18 }, name: "Gender", isSelected: false });
+            viewer.formDesignerModule.addFormField("RadioButton", { bounds: { X: 292, Y: 289, Width: 18, Height: 18 }, name: "Gender", isSelected: false });
             viewer.formDesignerModule.addFormField("Textbox", { name: "DOB Month", bounds: { X: 146, Y: 320, Width: 35, Height: 24 } });
             viewer.formDesignerModule.addFormField("Textbox", { name: "DOB Date", bounds: { X: 193, Y: 320, Width: 35, Height: 24 } });
             viewer.formDesignerModule.addFormField("Textbox", { name: "DOB Year", bounds: { X: 242, Y: 320, Width: 35, Height: 24 } });
@@ -62,6 +62,46 @@
             viewer.formDesignerModule.addFormField("Textbox", { name: "DOS Month", bounds: { X: 386, Y: 923, Width: 35, Height: 24 } });
             viewer.formDesignerModule.addFormField("Textbox", { name: "DOS Date", bounds: { X: 434, Y: 923, Width: 35, Height: 24 } });
             viewer.formDesignerModule.addFormField("Textbox", { name: "DOS Year", bounds: { X: 482, Y: 923, Width: 35, Height: 24 } });
+        }
+    }
+    function validateFormFields(args) {
+        var viewer = document.getElementById('pdfviewer').ej2_instances[0];
+        var errorMessage = "Required Field(s): ";
+        var forms = viewer.formFieldCollections;
+        var flag = false;
+        var radioGroupName = "";
+        for (var i = 0; i < forms.length; i++) {
+            var text = "";
+            if (forms[i].isRequired == true) {
+                if (forms[i].type.toString() == "Checkbox" && forms[i].isChecked == false) {
+                    text = forms[i].name;
+                }
+                else if (forms[i].type == "RadioButton" && flag == false) {
+                    radioGroupName = forms[i].name;
+                    if (forms[i].isSelected == true)
+                        flag = true;
+                }
+                else if (forms[i].type.toString() != "Checkbox" && forms[i].type != "RadioButton" && forms[i].value == "") {
+                    text = forms[i].name;
+                }
+                if (text != "") {
+                    if (errorMessage == "Required Field(s): ") {
+                        errorMessage += text;
+                    }
+                    else {
+                        errorMessage += ", " + text;
+                    }
+                }
+            }
+        }
+        if (!flag && radioGroupName != "") {
+            if (errorMessage == "Required Field(s): ")
+                errorMessage += radioGroupName;
+            else
+                errorMessage += ", " + radioGroupName;
+        }
+        if (errorMessage != "Required Field(s): ") {
+            viewer.showNotificationPopup(errorMessage);
         }
     }
 </script>
