--- a/Views/TreeView/LocalData.cshtml
+++ b/Views/TreeView/LocalData.cshtml
@@ -58,7 +58,7 @@
 @section ActionDescription{
 
 <div id="action-description">
-    <p>This sample demonstrates the binding of local data to the TreeView. Click on node to select it, and click on icon or double click on node to expand/collapse it.</p>
+    <p>This <a href="https://www.syncfusion.com/aspnet-mvc-ui-controls/treeview" target="_blank">ASP.NET MVC TreeView example</a> demonstrates the binding of local data to the TreeView. Click on node to select it, and click on icon or double click on node to expand/collapse it.</p>
 </div>
 
 
