--- a/Views/TreeView/MultipleSelection.cshtml
+++ b/Views/TreeView/MultipleSelection.cshtml
@@ -31,7 +31,7 @@
 @section ActionDescription{
 
  <div id="action-description">
-    <p>This sample demonstrates the multiple node selection functionalities of the TreeView. To select multiple nodes, press the CTRL key and select the desired nodes; or select any node and by pressing SHIFT key select another node, this selects all the nodes in-between the selected nodes.</p>
+    <p>This <a href="https://www.syncfusion.com/aspnet-mvc-ui-controls/treeview" target="_blank">ASP.NET MVC TreeView example</a> demonstrates the multiple node selection functionalities of the TreeView. To select multiple nodes, press the CTRL key and select the desired nodes; or select any node and by pressing SHIFT key select another node, this selects all the nodes in-between the selected nodes.</p>
 </div>
 
 
