--- a/Views/TreeView/RemoteData.cshtml
+++ b/Views/TreeView/RemoteData.cshtml
@@ -32,7 +32,7 @@
 
 
 <div id="action-description">
-    <p>This sample demonstrates the binding data to the TreeView from remote data source. On expanding the parent node, the spinner icon will be displayed until the child nodes will be loaded into parent node. Click on node to select it, and click on icon or double click on node to expand/collapse it.</p>
+    <p>This <a href="https://www.syncfusion.com/aspnet-mvc-ui-controls/treeview" target="_blank">ASP.NET MVC TreeView example</a> demonstrates the binding data to the TreeView from remote data source. On expanding the parent node, the spinner icon will be displayed until the child nodes will be loaded into parent node. Click on node to select it, and click on icon or double click on node to expand/collapse it.</p>
 </div>
 
 }
