--- a/Views/TreeView/Template.cshtml
+++ b/Views/TreeView/Template.cshtml
@@ -76,7 +76,7 @@
 @section ActionDescription{
 
   <div id="action-description">
-    <p>This sample demonstrates the template functionalities of the TreeView. Select the root node by clicking on it, or expand the root node and select the customized child node.</p>
+    <p>This <a href="https://www.syncfusion.com/aspnet-mvc-ui-controls/treeview" target="_blank">ASP.NET MVC TreeView example</a> demonstrates the template functionalities of the TreeView. Select the root node by clicking on it, or expand the root node and select the customized child node.</p>
 </div>
 
 }
