--- a/Views/Uploader/CustomDropArea.cshtml
+++ b/Views/Uploader/CustomDropArea.cshtml
@@ -113,7 +113,8 @@
 
 @section ActionDescription{
     <div id="action-description">
-        <p> This example demonstrates how to configure custom drop area of the Uploader. You can drop the files into specified custom drop area location to upload.  </p>
+        <p> This <a href="https://www.syncfusion.com/aspnet-mvc-ui-controls/file-upload"
+        target="_blank">ASP.NET MVC File Upload</a> example demonstrates how to configure custom drop area of the Uploader. You can drop the files into specified custom drop area location to upload.  </p>
 </div>
 }
 
