--- a/Views/Uploader/FormSupport.cshtml
+++ b/Views/Uploader/FormSupport.cshtml
@@ -118,7 +118,8 @@
 @section ActionDescription{
     <div id="action-description">
         <p>
-            This example demonstrates the Uploader control supported with HTML form upload.
+            This <a href="https://www.syncfusion.com/aspnet-mvc-ui-controls/file-upload"
+        target="_blank">ASP.NET MVC File Upload</a> example demonstrates the Uploader control supported with HTML form upload.
         </p>
         <p> 
             Fill the mandatory details in a form and click the submit button.
