--- a/Views/Uploader/ImagePreview.cshtml
+++ b/Views/Uploader/ImagePreview.cshtml
@@ -446,7 +446,8 @@
 
 @section ActionDescription{
     <div id="action-description">
-        <p>This example demonstrates how to add an image preview of the uploaded files. Browse or drag-and-drop image files (PNG, JPG) to display preview for the selected files. </p>
+        <p>This <a href="https://www.syncfusion.com/aspnet-mvc-ui-controls/file-upload"
+        target="_blank">ASP.NET MVC File Upload</a> example demonstrates how to add an image preview of the uploaded files. Browse or drag-and-drop image files (PNG, JPG) to display preview for the selected files. </p>
 
     </div>
 }
