Update Release Changes V19.4.48

--- a/Views/QueryBuilder/HeaderTemplate.cshtml
+++ b/Views/QueryBuilder/HeaderTemplate.cshtml
@@ -85,7 +85,7 @@
         querybuilder.addRules([{}], ddb[1]);
     }
     function deleteChange(args) {
-         querybuilder.deleteGroup(closest(args.target.offsetParent, '.e-group-container'));
+         querybuilder.deleteGroup(ej.base.closest(args.target.offsetParent, '.e-group-container'));
     }
 
 </script>
