--- a/Views/Schedule/Overview.cshtml
+++ b/Views/Schedule/Overview.cshtml
@@ -670,6 +670,7 @@
             letter-spacing: 0.33px;
             height: 24px;
             padding: 5px;
+            display: flex;
         }
 
         .schedule-overview .event-content div label {
@@ -684,6 +685,9 @@
             letter-spacing: 0.33px;
             line-height: 14px;
             padding-left: 8px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
         }
 
         .tailwind-dark .schedule-overview .event-content div label,
