--- a/Views/Signature/Toolbar.cshtml
+++ b/Views/Signature/Toolbar.cshtml
@@ -47,7 +47,7 @@
                 signature.disabled = args.checked;
             }
         }, "#disabled");
-        var items = [{ text: 'PNG' }, { text: 'JPEG' }, { text: 'SVG' }];
+        var items = [{ text: 'Png' }, { text: 'Jpeg' }, { text: 'Svg' }];
         new ej.splitbuttons.SplitButton({ content: 'Save', iconCss: 'e-sign-icons e-save', items: items, select: onSelect, disabled: true }, '#save-option');
         var strokeColor = new ej.inputs.ColorPicker({
             modeSwitcher: false,
@@ -210,13 +210,13 @@
 
         var items = [
             {
-                text: 'PNG'
+                text: 'Png'
             },
             {
-                text: 'JPG'
+                text: 'Jpeg'
             },
             {
-                text: 'SVG'
+                text: 'Svg'
             }
         ];
     </script>
