--- a/Views/Schedule/Print.cshtml
+++ b/Views/Schedule/Print.cshtml
@@ -52,6 +52,10 @@
         .e-hide-row {
             display: none;
         }
+
+        .e-schedule .e-schedule-toolbar .e-toolbar-items .e-toolbar-item.e-separator {
+            display: none;
+        }
     </style>
 
     <script type="text/javascript">
