--- a/Views/Tab/DragAndDrop.cshtml
+++ b/Views/Tab/DragAndDrop.cshtml
@@ -48,7 +48,7 @@
                       .Readonly(true)
                       .EventSettings(e =>
                         e.DataSource(d =>
-                           d.Url("http://localhost:62828/api/Schedule")
+                           d.Url("https://ej2services.syncfusion.com/production/web-services/api/Schedule")
                            .Adaptor("ODataV4Adaptor")
                            .CrossDomain(true)
                         )
