--- a/Views/Chart/RemoteData.cshtml
+++ b/Views/Chart/RemoteData.cshtml
@@ -46,7 +46,7 @@
 </div>
     <script>
         var dataManager = new ej.data.DataManager({
-            url: 'http://localhost:62828/api/Orders'
+            url: 'https://ej2services.syncfusion.com/production/web-services/api/Orders'
         });
 
         var query = new ej.data.Query().take(5).where('Estimate', 'lessThan', 3, false);
