--- a/Views/Grid/GridOverview.cshtml
+++ b/Views/Grid/GridOverview.cshtml
@@ -59,7 +59,7 @@
     </script>
 
     <script type="text/javascript">
-        var hostUrl = 'http://localhost:62828/';
+        var hostUrl = 'https://ej2services.syncfusion.com/production/web-services/';
         var urlapi = new ej.data.DataManager({
             url: hostUrl + "api/UrlDataSource",
             adaptor: new ej.data.UrlAdaptor()
