--- a/Views/Schedule/RemoteData.cshtml
+++ b/Views/Schedule/RemoteData.cshtml
@@ -6,7 +6,7 @@
         <div class="content-wrapper">
             @Html.EJS().Schedule("schedule").Width("100%").Height("650px").CurrentView(View.Month).EventSettings(es => es.DataSource(dataManager =>
                 {
-                    dataManager.Url("http://localhost:62828/api/Schedule").CrossDomain(true).Adaptor("WebApiAdaptor");
+                    dataManager.Url("https://ej2services.syncfusion.com/production/web-services/api/Schedule").CrossDomain(true).Adaptor("WebApiAdaptor");
                 })).Readonly(true).Render()
         </div>
     </div>
