--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -57,7 +57,7 @@
     @Scripts.Render("~/bundles/dependencies")
     <script src="~/Scripts/samplelist.js"></script>
     <script src="~/Scripts/search-index.js"></script>
-    <script src="~/Scripts/ej2.min.js"></script>
+    <script src="https://cdn.syncfusion.com/ej2/20.4.38/dist/ej2.min.js"></script>
     <script src="~/Scripts/documenteditor/default-properties.js"></script>
     <script src="~/Scripts/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.3.0/codemirror.js" type="text/javascript"></script>
