--- a/Content/Site.css
+++ b/Content/Site.css
@@ -533,8 +533,8 @@
 }
 .bootstrap5 #search-input-wrapper .sb-reset-icon:before, .bootstrap5-dark #search-input-wrapper .sb-reset-icon:before,
 .fluent #search-input-wrapper .sb-reset-icon:before, .fluent-dark #search-input-wrapper .sb-reset-icon:before,
-.tailwind #search-input-wrapper .sb-reset-icon:before, .tailwind-dark #search-input-wrapper .sb-reset-icon:before
-{
+.tailwind #search-input-wrapper .sb-reset-icon:before, .tailwind-dark #search-input-wrapper .sb-reset-icon:before,
+.material3 #search-input-wrapper .sb-reset-icon:before {
     content: '\e7e7';
 }
 .bootstrap4 #search-input-wrapper .sb-reset-icon:before {
@@ -1053,6 +1053,7 @@
     overflow-y: auto;
     position: absolute;
     padding-left: 5px;
+    border: none;
     -webkit-overflow-scrolling: touch;
 }
 
@@ -1093,7 +1094,7 @@
 }
 .sb-component-name h1 {
     font-family: "Roboto", "Segoe UI", "GeezaPro", "DejaVu Serif", "sans-serif";
-    font-size: 22px;
+    font-size: 18px;
     padding-bottom: 10px; 
     margin: 0;
 }
@@ -3228,6 +3229,7 @@ aside#left-sidebar {
     content: '\e7e7';
 }
 
+.material3 .copycode::before,
 .material3-dark .copycode::before {
     content: '\e77c';
 }
@@ -3296,7 +3298,7 @@ body.material3-dark, .material3-dark .sb-content {
 }
 
 .material3-dark .sb-theme-select {
-    color: rgba(28, 27, 31);
+    color: rgb(31, 41, 55);
 }
 
 body.material3-dark,
@@ -3426,3 +3428,92 @@ body.material3-dark,
 .material3-dark .sb-left-pane .e-listview .e-list-item:hover {
     background-color: rgba(255, 255, 255, 0.12);
 }
+
+.material3 .e-samplestatus.preview.tree, .material3 .e-samplestatus.Preview.tree,
+.material3 .e-samplestatus.update.tree, .material3 .e-samplestatus.Update.tree,
+.material3 .e-samplestatus.new.tree, .fluent .e-samplestatus.New.tree,
+.material3-dark .e-samplestatus.preview.tree, .material3-dark .e-samplestatus.Preview.tree,
+.material3-dark .e-samplestatus.update.tree, .material3-dark .e-samplestatus.Update.tree,
+.material3-dark .e-samplestatus.new.tree, .material3-dark .e-samplestatus.New.tree {
+    top: 9px;
+    line-height: 8px;
+}
+
+/*width changes for overlap*/
+.sb-left-pane {
+    width: 292px;
+    height: 100%;
+}
+
+.e-bigger .e-list-parent .e-list-parent .e-list-item.e-level-2 .tree-text {
+    width: calc(100% - 60px);
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+@media (max-width: 550px) {
+    .e-list-parent .e-list-parent .e-list-item.e-level-2 .tree-text {
+        width: calc(100% - 60px);
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+}
+
+.material3.e-bigger .e-samplestatus.preview.tree, .material3.e-bigger .e-samplestatus.Preview.tree,
+.material3.e-bigger .e-samplestatus.update.tree, .material3.e-bigger .e-samplestatus.Update.tree,
+.material3.e-bigger .e-samplestatus.new.tree, .material3.e-bigger .e-samplestatus.New.tree,
+.material3-dark.e-bigger .e-samplestatus.preview.tree, .material3-dark.e-bigger .e-samplestatus.Preview.tree,
+.material3-dark.e-bigger .e-samplestatus.update.tree, .material3-dark.e-bigger .e-samplestatus.Update.tree,
+.material3-dark.e-bigger .e-samplestatus.new.tree, .material3-dark.e-bigger .e-samplestatus.New.tree {
+    top: 9px;
+    line-height: 11px;
+}
+
+
+.material3.e-bigger .e-badge.sb-badge.e-samplestatus.New, .material3.e-bigger .e-badge.sb-badge.e-samplestatus.new,
+.material3.e-bigger .e-badge.sb-badge.e-samplestatus.Update, .material3.e-bigger .e-badge.sb-badge.e-samplestatus.update,
+.material3.e-bigger .e-badge.sb-badge.e-samplestatus.Preview, .material3.e-bigger .e-badge.sb-badge.e-samplestatus.preview,
+.material3-dark.e-bigger .e-badge.sb-badge.e-samplestatus.New, .material3-dark.e-bigger .e-badge.sb-badge.e-samplestatus.new,
+.material3-dark.e-bigger .e-badge.sb-badge.e-samplestatus.Update, .material3-dark.e-bigger .e-badge.sb-badge.e-samplestatus.update,
+.material3-dark.e-bigger .e-badge.sb-badge.e-samplestatus.Preview, .material3-dark.e-bigger .e-badge.sb-badge.e-samplestatus.preview {
+    padding: 6px 8px;
+    font-size: 10px;
+    border-radius: 2px;
+    height: 24px;
+    margin: 2px 0px !important;
+}
+
+
+/*Material3 theme changes */
+.material3 .sb-content-tab > .e-tab.e-nested > .e-tab-header > .e-items.e-toolbar-items > .e-toolbar-item.e-active > .e-tab-wrap > .e-text-wrap > .e-tab-text,
+.material3 .sb-content-tab > .e-tab.e-nested > .e-tab-header > .e-items.e-toolbar-items > .e-toolbar-item:hover > .e-tab-wrap > .e-text-wrap > .e-tab-text,
+.material3 .sb-source-section .e-tab .e-tab-header .e-toolbar-item.e-active .e-tab-text,
+.material3 .sb-source-section .e-tab .e-tab-header .e-toolbar-item:hover .e-tab-text,
+.material3 .control-name,
+.material3 .sb-icon-Hamburger,
+.material3 .sb-footer-links a,
+.material3 .sb-plnr-section,
+.material3 .sb-open-new-wrapper a:hover,
+.material3 .sample-navigation > button:hover {
+    color: #6750a4;
+}
+
+.material3 #left-sidebar {
+    background: #fff;
+}
+
+.material3 .sb-left-pane .e-listview .e-list-item.e-hover,
+.material3 .sb-left-pane .e-listview .e-list-item.e-active,
+.material3 .sb-left-pane .e-treeview .e-list-item.e-hover > .e-fullrow {
+    background-color: #eaddff;
+}
+
+.material3 .sb-content-tab > .e-tab.e-nested > .e-tab-header > .e-items.e-toolbar-items > .e-indicator {
+    background: #6750a4;
+}
+
+#controlList .e-list-group-item .e-list-text {
+    font-size: 16px;
+    font-weight: 800;
+}
+
